[package]
name = "speech-test"
version = "0.1.0"
authors = ["Graham Wihlidal <graham@wihlidal.ca>"]

[dependencies]
restson = "^0.1"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
base64 = "~0.6.0"
tempfile = "3.0.0"
rodio = "0.6.0"
clap = "2.31.2"
audrey = "0.2.0"
cpal = "0.8.0"
hound = "3.3.1"
file = "1.1.1"